<resources>
    <!--  App name  -->
    <string name="app_name">Task-2. RecyclerView</string>
    <!--  Main activity  -->
    <string name="settings">Settings</string>
    <string name="profile_image">Profile image</string>
    <string name="name">Lucile Alvarado</string>
    <string name="profession">Graphic designer</string>
    <string name="address">5295 Gaylord Walks Apk. 110</string>
    <string name="edit_profile">Edit profile</string>
    <string name="view_my_contacts">VIEW MY CONTACTS</string>
    <!-- Main activity service strings  -->
    <string name="error_message_email">Incorrect E-Mail address</string>
    <string name="error_message_password">Min 8 symbols. Letters and digits are required</string>
    <!--  Sign up activity  -->
    <string name="let_s_get_a">Let\'s get acquainted</string>
    <string name="fill_out_the_profile">Fill out the profile and go to the application!</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="google">google</string>
    <string name="or">or</string>
    <string name="register">register</string>
    <string name="by_clicking">By clicking Register you agree to our Terms and Conditions</string>
    <string name="already_have">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="not_found">Not found</string>
    <!--  contentDescription  -->
    <string name="icon_facebook">Facebook icon</string>
    <string name="icon_linkedin">LinkedIn icon</string>
    <string name="icon_instagram">Instagram icon</string>
    <string name="contacts">Contacts</string>
    <string name="add_contacts">Add contacts</string>
    <string name="add_contact">Add contact</string>
    <string name="dialog_contact_name">Name</string>
    <string name="dialog_contact_surname">Surname</string>
    <string name="dialog_contact_profession">Profession</string>
</resources>