<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/steel_gray"
    tools:context=".presentation.signUp.SignUpFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalSignUp015"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalSignUp028"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalSignUp061"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalSignUp066"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalSignUp090"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSignUpGetAcquainted"
        style="@style/widthHeightIsWrapContent"
        android:layout_marginBottom="@dimen/dimension_8dp"

        android:text="@string/let_s_get_a"
        android:textAlignment="center"
        android:textAppearance="@style/textViewLetsGetAcquaintedTextAppearance"

        app:layout_constraintBottom_toTopOf="@+id/textViewSignUpFillOutProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalSignUp015"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSignUpFillOutProfile"
        style="@style/widthHeightIsWrapContent"

        android:text="@string/fill_out_the_profile"
        android:textAlignment="center"
        android:textAppearance="@style/textViewLFillOutTextAppearance"

        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontalSignUp028"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSignUpGetAcquainted" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSignUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimension_16dp"

        android:hint="@string/email"
        android:textColorHint="@color/silver"
        android:theme="@style/ThemeOverlay.App.TextInputLayout"
        app:errorEnabled="true"
        app:expandedHintEnabled="false"

        app:layout_constraintBottom_toTopOf="@id/textInputLayoutSignUpPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalSignUp028"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextSignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@android:color/transparent"

            android:inputType="textEmailAddress"
            android:textColor="@color/alabaster"
            android:textSize="@dimen/text_18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSignUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimension_16dp"

        android:hint="@string/password"
        android:textColorHint="@color/silver"
        android:theme="@style/ThemeOverlay.App.TextInputLayout"
        app:errorEnabled="true"
        app:expandedHintEnabled="false"

        app:layout_constraintBottom_toTopOf="@id/checkBoxSignUpRememberMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutSignUpEmail">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@android:color/transparent"

            android:inputType="textPassword"
            android:textColor="@color/alabaster"
            android:textSize="@dimen/text_18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBoxSignUpRememberMe"
        style="@style/widthHeightIsWrapContent"

        android:button="@drawable/cb"
        android:buttonTint="@color/alabaster"
        android:checked="true"
        android:paddingStart="@dimen/dimension_8dp"
        android:text="@string/remember_me"
        android:textAppearance="@style/checkBoxRememberMeTextAppearance"
        android:textColor="@color/bombay"

        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalSignUp061"
        app:layout_constraintStart_toStartOf="@id/textInputLayoutSignUpPassword"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutSignUpPassword"
        tools:ignore="RtlSymmetry" />

    <sdumchykov.androidApp.presentation.custom.GoogleButton
        android:id="@+id/buttonSignUpSignInWithGoogle"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimension_40dp"
        android:layout_marginHorizontal="@dimen/dimension_16dp"

        app:layout_constraintBottom_toTopOf="@id/textViewSignUpOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalSignUp066"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSignUpOr"
        style="@style/widthHeightIsWrapContent"
        android:layout_marginVertical="@dimen/dimension_8dp"

        android:text="@string/or"
        android:textAlignment="center"
        android:textAppearance="@style/textViewOrTextAppearance"

        app:layout_constraintBottom_toTopOf="@id/buttonSignUpRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSignUpSignInWithGoogle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignUpRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimension_16dp"

        android:background="@drawable/selector_button_register"
        android:text="@string/register"
        android:textColor="@color/alabaster"

        android:textSize="@dimen/text_16sp"
        app:backgroundTint="@null"

        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalSignUp090"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSignUpOr" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSignUpTermAndCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimension_16dp"

        android:fontFamily="@font/opensans_regular"
        android:text="@string/by_clicking"
        android:textAlignment="center"
        android:textAppearance="@style/textViewTermAndConditionTextAppearance"

        app:layout_constraintBottom_toTopOf="@id/textViewSignUpAlreadyHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalSignUp090" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSignUpAlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimension_8dp"
        android:layout_marginBottom="@dimen/dimension_16dp"

        android:gravity="center"
        android:text="@string/already_have"
        android:textAlignment="center"
        android:textColor="@color/bombay"
        android:textSize="@dimen/text_14sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textViewSignUpSignIn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSignUpTermAndCondition" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSignUpSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimension_12dp"

        android:fontFamily="@font/opensans_semi_bold"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_14sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewSignUpAlreadyHaveAccount"
        app:layout_constraintTop_toTopOf="@id/textViewSignUpAlreadyHaveAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>