<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/steel_gray">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAddContactsDialogName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimension_16dp"

        android:hint="@string/dialog_contact_name"
        android:textColorHint="@color/silver"
        app:hintTextColor="@color/silver"

        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextAddContactsDialogName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textPersonName"
            android:textColor="@color/alabaster" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAddContactsDialogSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimension_16dp"

        android:hint="@string/dialog_contact_surname"
        android:textColorHint="@color/silver"
        app:hintTextColor="@color/silver"

        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddContactsDialogName">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextAddContactsDialogSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textPersonName"
            android:textColor="@color/alabaster" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAddContactsDialogProfession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimension_16dp"

        android:hint="@string/dialog_contact_profession"
        android:textColorHint="@color/silver"
        app:hintTextColor="@color/silver"

        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddContactsDialogSurname">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextAddContactsDialogProfession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="text"
            android:textColor="@color/alabaster" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddContactsDialogAdd"
        android:layout_width="156dp"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/orange"
        android:fontFamily="@font/opensans_semi_bold"
        android:text="@string/add_contact"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonAddContactsDialogCancel"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddContactsDialogProfession" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddContactsDialogCancel"
        android:layout_width="156dp"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/alabaster"
        android:fontFamily="@font/opensans_semi_bold"
        android:text="Cancel"
        android:textSize="@dimen/text_16sp"

        app:layout_constraintEnd_toStartOf="@id/buttonAddContactsDialogAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddContactsDialogProfession" />
</androidx.constraintlayout.widget.ConstraintLayout>